examples/invalid/semanticErr/declaration/basicTypeErr03.wacc
# type mismatch: int <- string
# Output:
# #semantic error#

#Program:#

begin
  int i = "foo"
end
